Expose port and add docker login.

--- a/circle.yml
+++ b/circle.yml
@@ -7,4 +7,5 @@ deployment:
     branch: master
     commands:
       - docker build -t gmorpheme/foobar-txn .
+      - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
       - docker push gmorpheme/foobar-txn
