--- a/circle.yml
+++ b/circle.yml
@@ -7,5 +7,7 @@ deployment:
     branch: master
     commands:
       - docker build -t gmorpheme/foobar-txn:0.1.0.$CIRCLE_BUILD_NUM .
+      - docker tag gmorpheme/foobar-txn:0.1.0.$CIRCLE_BUILD_NUM gmorpheme/foobar-txn:latest
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
       - docker push gmorpheme/foobar-txn:0.1.0.$CIRCLE_BUILD_NUM
+      - docker push gmorpheme/foobar-txn:latest
